[package]
name = "mi-band-data-interpreter"
description = "An interpreter of data exported by the MiFit app using a SmartBand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
