[package]
name = "mi-band-data-interpreter"
description = "An interpreter of data exported by the MiFit app using a SmartBand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
glob = "0.3.0"
actix-web = "3"
actix-multipart = "0.3.0"
futures-util = "0.3"
sanitize-filename = "0.2"
uuid = { version = "0.8", features = ["v4"] }
async-std = "1.8"
zip = "0.5"
zip-extensions = "0.6"